# OpenCVTutorial

./: .gitignore  CMakeLists.txt  README.md  WIN_Install.md
include/: DisplayImage.h  core_functionality.h  random.h
src/: DisplayImage.cpp  core_functionality.cpp  main.cpp  random.cpp
